--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat May 21 16:23:28 ICT 2022
-sdk.dir=C\:\\Users\\phank\\AppData\\Local\\Android\\Sdk
+#Mon May 23 11:46:30 ICT 2022
+sdk.dir=C\:\\Users\\pkhung\\AppData\\Local\\Android\\Sdk
